--- a/stylos.css
+++ b/stylos.css
@@ -10,7 +10,7 @@
 }
 .portada{
     width: 100%; height: 100%;
-    background: url("Imagenes/portada.png");
+    background: url("portada.png");
     background-attachment: fixed;
 }
 .contenido{
